<package format="2">
    <name>xentrinobot_pid</name>
    <version>0.0.1</version>
    <description>Xentrinobot PID dynamic_reconfigure</description>
    <author>Christopher Coballes</author>
    <maintainer email="cobecoballes@gmail.com">Christopher Coballes</maintainer>
    <license>BSD</license>
    <url>https://github.com/hi-techno-barrio/xentrinobot_pid</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>lino_msgs</depend>
</package>
